Add memory footprint for Arc processes in task manager

This change adds memory footprint information for Arc processes into the
chrome task manager. ArcProcessService requests a global dump from
Android, and upon receipt provides it to the task manager (through
ArcProcessTaskProvider)

BUG=799538
TEST=Manual, compared memory footprint in task manager to top

Change-Id: I5e10ba05e28185de750b6deb2f46d9227d4cc751
Reviewed-on: https://chromium-review.googlesource.com/c/1263335
Commit-Queue: Willie Koomson <wvk@google.com>
Reviewed-by: Ahmed Fakhry <afakhry@chromium.org>
Reviewed-by: Dominick Ng <dominickn@chromium.org>
Reviewed-by: Brian White <bcwhite@chromium.org>
Reviewed-by: Erik Chen <erikchen@chromium.org>
Reviewed-by: Hidehiko Abe <hidehiko@chromium.org>
Cr-Commit-Position: refs/heads/master@{#603983}