chrome/browser/profiling_host/background_profiling_triggers.cc
@@ -71,6 +71,7 @@ int GetContentProcessType(
     case ProcessType::PLUGIN:
       return content::ProcessType::PROCESS_TYPE_PLUGIN_DEPRECATED;
 
+    case ProcessType::ARC:
     case ProcessType::OTHER:
       return content::ProcessType::PROCESS_TYPE_UNKNOWN;
   }
