chrome/browser/task_manager/sampling/task_group.cc
@@ -91,6 +91,9 @@ TaskGroup::TaskGroup(
       on_background_calculations_done_(on_background_calculations_done),
       worker_thread_sampler_(nullptr),
       shared_sampler_(shared_sampler),
+#if defined(OS_CHROMEOS)
+      arc_shared_sampler_(nullptr),
+#endif  // defined(OS_CHROMEOS)
       expected_on_bg_done_flags_(kBackgroundRefreshTypesMask),
       current_on_bg_done_flags_(0),
       platform_independent_cpu_usage_(0.0),
@@ -140,6 +143,10 @@ TaskGroup::TaskGroup(
 
 TaskGroup::~TaskGroup() {
   shared_sampler_->UnregisterCallback(process_id_);
+#if defined(OS_CHROMEOS)
+  if (arc_shared_sampler_)
+    arc_shared_sampler_->UnregisterCallback(process_id_);
+#endif  // defined(OS_CHROMEOS)
 }
 
 void TaskGroup::AddTask(Task* task) {
@@ -238,6 +245,16 @@ void TaskGroup::ClearCurrentBackgroundCalculationsFlags() {
 bool TaskGroup::AreBackgroundCalculationsDone() const {
   return expected_on_bg_done_flags_ == current_on_bg_done_flags_;
 }
+
+#if defined(OS_CHROMEOS)
+void TaskGroup::SetArcSampler(ArcSharedSampler* sampler) {
+  DCHECK(sampler);
+  arc_shared_sampler_ = sampler;
+  arc_shared_sampler_->RegisterCallback(
+      process_id_, base::BindRepeating(&TaskGroup::OnArcSamplerRefreshDone,
+                                       weak_ptr_factory_.GetWeakPtr()));
+}
+#endif  // defined(OS_CHROMEOS)
 
 void TaskGroup::RefreshGpuMemory(
     const gpu::VideoMemoryUsageStats& gpu_memory_stats) {
@@ -343,6 +360,14 @@ void TaskGroup::OnSamplerRefreshDone(
   OnBackgroundRefreshTypeFinished(expected_on_bg_done_flags_ &
                                   shared_sampler_->GetSupportedFlags());
 }
+
+#if defined(OS_CHROMEOS)
+void TaskGroup::OnArcSamplerRefreshDone(
+    base::Optional<ArcSharedSampler::MemoryFootprintBytes> memory_footprint) {
+  if (memory_footprint)
+    set_footprint_bytes(*memory_footprint);
+}
+#endif  // defined(OS_CHROMEOS)
 
 void TaskGroup::OnBackgroundRefreshTypeFinished(int64_t finished_refresh_type) {
   DCHECK_CURRENTLY_ON(content::BrowserThread::UI);
