chrome/browser/metrics/process_memory_metrics_emitter_unittest.cc
@@ -427,6 +427,7 @@ void PopulateMetrics(GlobalMemoryDumpPtr& global_dump,
       return;
     case ProcessType::PLUGIN:
     case ProcessType::OTHER:
+    case ProcessType::ARC:
       break;
   }
 
@@ -447,6 +448,7 @@ base::flat_map<const char*, int64_t> GetExpectedProcessMetrics(
       return GetExpectedAudioServiceMetrics();
     case ProcessType::PLUGIN:
     case ProcessType::OTHER:
+    case ProcessType::ARC:
       break;
   }
 
